# Hackathon-Future-City

./: README.md  TODO.md  requirements.md
api/: google-maps.md
backend/: .env.example  README.md  init_db.py  pyproject.toml  seed_data.py
backend/app/: main.py  schemas.py
backend/app/core/: database.py
backend/app/models/: models.py
backend/app/planner/: models.py  planner.py  util.py
backend/app/routers/: __init__.py  ask.py  items.py  jobs.py  planner_test.py  roles.py  workers.py
backend/app/services/: planner_service.py
backend/seed/: branches_seed.py  items_seed.py  jobs_seed.py  roles_seed.py  seed.py  stocks_seed.py  workers_seed.py
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  color-palette.css  index.css
frontend/src/components/: Footer.tsx  JobCreationForm.tsx  Layout.tsx  Navbar.tsx  OperationsMap.tsx  WorkerCalendar.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  ItemPage.tsx  ItemsPage.tsx  JobCreatePage.tsx  JobDetailsPage.tsx  JobEditPage.tsx  JobPage.tsx  JobsListPage.tsx  JobsPage.tsx  WorkerPage.tsx  WorkersPage.tsx
frontend/src/services/: api.ts
