[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "numpy>=2.3.5",
    "ortools>=9.14.6206",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
